--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -1,5 +1,5 @@
-<div class="max-w-screen-xl mx-auto px-4 sm:px-6"></div>
-  <nav class="relative flex items-center justify-between sm:h-10 md:justify-center">
+<div class="sticky-nav flex justify-center max-w-screen-xl mx-auto px-4 sm:px-6"></div>
+  <nav class="flex items-center justify-between sm:h-10 md:justify-center">
     <!-- logo => home -->
     <!-- <div class="flex items-center flex-1 md:absolute md:inset-y-0 md:left-0">
       <div class="flex items-center justify-between w-full md:w-auto">
@@ -19,18 +19,18 @@
     <!-- nav items -->
     <!-- space out nav items with space-x-# -->
     <div class="hidden md:flex md:space-x-24 text-2xl font-bold">
-      <div>
+      <h3>
         <a href="#" class="font-large text-black hover:text-pink-700 transition duration-150 ease-in-out uppercase">Home</a>
-      </div>
-      <div>
+      </h3>
+      <h3>
         <a href="#" class="font-large text-black hover:text-pink-700 transition duration-150 ease-in-out uppercase">Blog</a>
-      </div>
-      <div>
+      </h3>
+      <h3>
         <a href="#" class="font-large text-black hover:text-pink-700 transition duration-150 ease-in-out uppercase">About</a>
-      </div>
-      <div>
+      </h3>
+      <h3>
         <a href="#" class="font-large text-black hover:text-pink-700 transition duration-150 ease-in-out uppercase">Contact</a>
-      </div>
+      </h3>
     </div>
   </nav>
 </div>
